@@ -16,6 +16,7 @@ export(rss)
 export(simplex_projection)
 export(skeletonplot)
 export(stepArchetypes)
+export(tspsimplex_projection)
 export(weightedArchetypes)
 export(xyplot)
 exportMethods(parameters)
