@@ -2,9 +2,12 @@
 \alias{archmap_projections}
 \alias{atypes_projection}
 \alias{simplex_projection}
+\alias{tspsimplex_projection}
 \title{Archetypal map projections}
 \usage{
   simplex_projection(x, r = 10)
+
+  tspsimplex_projection(x, r = 10, equidist = FALSE, ...)
 
   atypes_projection(x)
 }
@@ -12,6 +15,12 @@
   \item{x}{Archetypes matrix}
 
   \item{r}{Radius of the simplex projection}
+
+  \item{equidist}{Arrange archetypes equidistantly or in
+  relation to their distance}
+
+  \item{...}{Parameters for the
+  \code{\link[TSP]{solve_TSP}} function}
 }
 \value{
   Matrix with the projected archetypes
