@@ -3,6 +3,9 @@ Changes in archetypes version 2.1-1
 
   o Fixed bug in movieplot2.
 
+  o Added extended simplex projection 'tspsimplex_projection' (based
+    on TSP) for archetypal maps.
+
 
 Changes in archetypes version 2.1-0
 
